# sdf

./: .gitignore  README.md  pyproject.toml
docs/: configuration.md  file-browser.md  index.md  keybindings.md  preview.md
sdf/: __init__.py  app.py  cli.py  config.py  example.md
tests/: test_sdf.py
